cabal-version:          3.6
name:                   rolling-cache
version:                0.0.1.0
synopsis:               a monad transformer for fixed-size caches
description:            a monad transformer for fixed-size caches. supports rolling and pinning.
bug-reports:            https://github.com/nathaniel-may/rolling-cache/issues
license:                MIT
author:                 Nathaniel May
maintainer:             nathaniel.may@fishtownanalytics.com
category:               caching
extra-source-files:
    README.md

source-repository       head
    type:               git
    location:           https://github.com/nathaniel-may/rolling-cache/

library
    exposed-modules:    Data.Cache
                      , Control.Monad.Cache.CacheT
                      , Control.Monad.Cache.Class.MonadCache
    build-depends:      base ^>=4.16.4.0
    hs-source-dirs:     src
    default-language:   Haskell2010
