cabal-version:          3.6
name:                   rolling-cache
version:                0.0.1.0
synopsis:               a monad transformer for fixed-size caches
description:            a monad transformer for fixed-size caches. supports rolling and pinning.
bug-reports:            https://github.com/nathaniel-may/rolling-cache/issues
license:                MIT
author:                 Nathaniel May
maintainer:             nathaniel.may@fishtownanalytics.com
category:               caching
extra-source-files:     README.md

source-repository       head
    type:               git
    location:           https://github.com/nathaniel-may/rolling-cache/

library
    hs-source-dirs:     src
    exposed-modules:    Data.Cache
                      , Control.Monad.Cache.CacheT
                      , Control.Monad.Cache.Class.MonadCache
    build-depends:      base ^>=4.16.4.0
                      , hashable ==1.4.1.*
                      , mtl ==2.3.*
                      , transformers ==0.6.*
                      , unordered-containers ==0.2.19.*
                      , vector ==0.12.3.*
    default-language:   Haskell2010


test-suite test
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Main.hs
    other-modules:      CacheT.Prop
    build-depends:      rolling-cache
                      , base ^>=4.16.4.0
                      , QuickCheck ==2.14.*
                      , quickcheck-instances ==0.3.*
    default-language:   Haskell2010

executable example
    hs-source-dirs:     example
    main-is:            Main.hs
    build-depends:      base ^>=4.16.4.0
                      , hashable ==1.4.1.*
                      , mtl ==2.3.*
                      , rolling-cache
                      , transformers ==0.6.*
    default-language:   Haskell2010
